# larryob

./: .env.example  .gitignore  AGENTS.md  ARCHITECTURE.md  CLAUDE.md  CONTRIBUTING.md  COVERAGE_PLAN.md  GEMINI.md  PLAN.md  README.md  analyze_codebase.py  format_results.py  ingest.py  nba_raw_data.db  pyproject.toml
.cache/: teams_static.json
.claude/: settings.local.json
.githooks/: pre-commit
.sisyphus/: ralph-loop.local.md
research/: 1.md  2.md  3.md  4.md  5.md  completeness_contract.yaml  completion_report.md  players_missing_bref_id.txt  resources.md
scripts/: completion_audit.py  sync_agents.py
tests/: AGENTS.md  conftest.py  hypothesis_strategies.py  test_analytics.py  test_completion_audit.py  test_config_integration.py  test_db_cache_file_cache.py  test_db_operations_upsert.py  test_db_schema_full_history.py  test_db_tracking_etl_log.py  test_db_tracking_fingerprint.py  test_etl_api_client.py  test_etl_awards.py  test_etl_backfill_advanced_stats.py  test_etl_backfill_all_nba.py  test_etl_backfill_all_star.py  test_etl_backfill_awards.py  test_etl_backfill_base.py  test_etl_backfill_dims.py  test_etl_backfill_draft.py  test_etl_backfill_game_logs.py  test_etl_backfill_games.py  test_etl_backfill_orchestrator.py  test_etl_backfill_pbp_bulk.py  test_etl_backfill_player_career.py  test_etl_backfill_player_career_resolve.py  test_etl_backfill_salary_history.py  test_etl_backfill_season_stats.py  test_etl_canonical_boxscore.py  test_etl_canonical_game_inventory.py  test_etl_coach_assignments.py  test_etl_config.py  test_etl_dimensions.py  (+44 more)
(+199 files in other folders)
