[project]
name = "larryob"
version = "0.1.0"
description = "NBA analytics database: SQLite ingestion (OLTP) + DuckDB analytics (OLAP)"
requires-python = ">=3.13"
dependencies = [
    "balldontlie>=0.1.6",
    "duckdb>=1.4.4",
    "nba-api>=1.11.4",
    "pandas>=3.0.1",
    "requests>=2.32.5",
]

[dependency-groups]
dev = [
    "pytest>=9.0.2",
]
